style.css
html{
    box-sizing: border-box; 
    scroll-behavior: smooth;
}  
*{
margin: 0;
padding: 0;   
box-sizing: border-box;
}
html, body {
    overflow-x: hidden;
}
:root {
    --mainColor-darkGrey: #232323;
    --mainColor-lighterGrey: #2D2D2C;
    --mainColor-Grey: #121212;
    --mainColor-Black: #000000;
    --highlightcolor-lIGHTPurple: #C5BEF6;
    --inputFieldColor-lightGrey: #383838;
    --highlightcolor-washedGreen: #A9EBCE;
    --highlightcolor-lightYellow: #D3D641;
    --highlightcolor-lightRed: #FF6961;
    --highlightcolor-lightGrey: #454545;
    --highlightcolor-lightGreen: #B9FF3B;
    --highlightcolor-darkGreen: #0A332C;
    --notificationcolor-wpGreen: #00A884;
    --logo-font: "Lobster", sans-serif;
    --nav-font: "Alata", sans-serif;
    --headers-font: "Poppins", sans-serif;
    --paragraphs-font: "Nunito Sans", sans-serif;
}
body {
    font-size: 16px;
        margin: 0 auto;
    display: flex;
    flex-direction: column;
    align-items: center;
    font-family: Arial, sans-serif;
    background: var(--mainColor-lighterGrey);
    color: white;
}
.card{
    display: flex;
    flex-direction: column;
    height: 100px;
    width: fit-content;
    text-align: center;
    margin-bottom: 25px;

}
.word{
    font-size: 1.9rem;
    font-weight: 800;
}
.engels{
    color: #00A884;
}
.sort, .engels, .descr, .word{
    margin: 5px 5px;
}
#output{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 10px;
}
h1{
    text-align: center;
}
#showAll {
    cursor: pointer;
    padding: 10px 20px;
    border-radius: 10px;
    color: black;
    text-decoration: none;
    font-family: var(--nav-font);
    font-weight: 600;
    background-color: var(--highlightcolor-lIGHTPurple);
}
.showRandom{
    cursor: pointer;
    padding: 10px 20px;
    margin-top: 5px;
    border-radius: 10px;
    border:none;
    color: black;
    text-decoration: none;
    font-family: var(--nav-font);
    font-weight: 600;
    background-color: var(--highlightcolor-washedGreen);
}
.showByThema{
    cursor: pointer;
    padding: 10px 20px;
    margin-top: 5px;
    border-radius: 10px;
    border:none;
    color: black;
    text-decoration: none;
    font-family: var(--nav-font);
    font-weight: 600;
    background-color: var(--highlightcolor-lightRed);
}
.RandButton{
    padding: 10px 20px;
    margin-top: 5px;
    border-radius: 10px;
    border:none;
    color: black;
    text-decoration: none;
    font-family: var(--nav-font);
    font-weight: 600;
    background-color: var(--notificationcolor-wpGreen);
}
li{
    text-decoration: none;
}
ul{
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    text-decoration: none;
    list-style-type: none;
    align-items: center;
    gap: 10px;
}
h1{
    font-family: var(--logo-font);
    font-weight: 800;
    font-size: 3rem;
    padding-bottom: 15px;
}
nav{
    width: 90%;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    border-radius: 10px;
    padding: 15px 0 15px 0;
    background-color: var(--mainColor-Grey);
}
.input_group {
    display: flex;
    flex-direction: column;
    gap: 5px;
}
.outputContainer{
    margin-top: 25px;
}
select{
    border-radius: 10px;
}
@media only screen and (max-width: 768px){
    nav{
        width: 100vw;
        padding: 25px 0 25px 0;
    }
    h1{
        font-size: 2rem;
    }
}

